--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3"
 
 services:
-  pomodoro-service:
-    build:
-      context: ./../pomodoro-service
-      dockerfile: ./../pomodoro-service/Dockerfile
-    restart: always
-    deploy:
-      mode: replicated
-      replicas: 1
+  # pomodoro-service:
+  #   build:
+  #     context: ./../pomodoro-service
+  #     dockerfile: ./../pomodoro-service/Dockerfile
+  #   restart: always
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
 
   # postgres:
   #   image: "postgres:16"
@@ -23,9 +23,11 @@ services:
   #   volumes:
   #     - ./db-data/postgres/:/var/lib/postgresql/data/
 
-  # redis:
-  #   image: "redis:8.0.3-alpine"
-  #   restart: always
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
+  redis:
+    image: "redis:8.0.3-alpine"
+    restart: always
+    ports:
+      - "6379:6379"
+    deploy:
+      mode: replicated
+      replicas: 1
