chores: adding into docker

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,18 @@
 # Database Configuration
-POSTGRES_USER=pomodoro_user
-POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
 POSTGRES_DB=pomodoro_db
-DSN=postgres://pomodoro_user:your_secure_password_here@localhost:5432/pomodoro_db?sslmode=disable
-
-# JWT Configuration
-JWT_SECRET=your-super-secure-jwt-secret-key-change-in-production
 
 # Application Configuration
 WEB_PORT=8080
 REDIS_ADDR=localhost:6379
+
+WORK_TIME_DURATION=25
+SHORT_BREAK_DURATION=5
+LONG_BREAK_DURATION=20
+SCHEDULING=W-SB-W-SB-W-SB-W-LB
+
+# DSN Template (must be expanded — no ${...})
+DSN=postgres://user:password@localhost:5435/pomodoro_db?sslmode=disable
+
+JWT_SECRET=your-super-secure-jwt-secret-key-change-in-production
