--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,32 @@
 version: "3"
 
 services:
-  # pomodoro-service:
-  #   build:
-  #     context: ./../pomodoro-service
-  #     dockerfile: ./../pomodoro-service/Dockerfile
-  #   restart: always
-  #   deploy:
-  #     mode: replicated
-  #     replicas: 1
+  pomodoro-service:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    ports:
+      - "8080:8080"
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - WEB_PORT=${WEB_PORT}
+      - REDIS_ADDR=${REDIS_ADDR}
+      - WORK_TIME_DURATION=${WORK_TIME_DURATION}
+      - SHORT_BREAK_DURATION=${SHORT_BREAK_DURATION}
+      - LONG_BREAK_DURATION=${LONG_BREAK_DURATION}
+      - SCHEDULING=${SCHEDULING}
+      - DSN=${DSN}
+      - JWT_SECRET=${JWT_SECRET}
+
 
   postgres:
     image: "postgres:16"
