chores: forgot gitignore

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ POSTGRES_DB=pomodoro_db
 
 # Application Configuration
 WEB_PORT=8080
-REDIS_ADDR=localhost:6379
+REDIS_ADDR=redis:6379
 
 WORK_TIME_DURATION=25
 SHORT_BREAK_DURATION=5
@@ -13,6 +13,6 @@ LONG_BREAK_DURATION=20
 SCHEDULING=W-SB-W-SB-W-SB-W-LB
 
 # DSN Template (must be expanded — no ${...})
-DSN=postgres://user:password@localhost:5435/pomodoro_db?sslmode=disable
+DSN=postgres://user:password@postgres:5432/pomodoro_db?sslmode=disable
 
 JWT_SECRET=your-super-secure-jwt-secret-key-change-in-production
